fixed pagination arrows sizes on small screens at hblog.html

--- a/#src/scss/style.sass
+++ b/#src/scss/style.sass
@@ -3622,6 +3622,7 @@
 			@media screen and (max-width: $media-sm)
 				width: 36px
 				height: 36px
+				background-size: 9px 15px
 
 		&_prev
 			margin-right: 50px
